# plugin_system

./: CMakeLists.txt  README.md  package.xml  plugins.xml
include/plugin_system/: string_counter.hpp  string_processor.hpp  string_reverser.hpp
src/: plugin_manager.cpp  string_counter.cpp  string_reverser.cpp
